<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="20dp"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInputLayoutStyle"
        >

        <EditText
            android:id="@+id/edt_search_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_category"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInputLayoutStyle"
        >

        <EditText
            android:id="@+id/edt_search_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_item"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:background="@drawable/bt_round"
        android:textColor="@color/accent_color"
        />

</LinearLayout>

    <include layout="@layout/view_progress"/>
    <include layout="@layout/view_retry"/>

</RelativeLayout>