<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutStyle"
            >

            <EditText
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/admin_description"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/admin_type"
            android:layout_marginLeft="5dp"
            android:textColor="@color/secondary_color"
            />

            <Spinner
                android:id="@+id/admin_type_task_spinner"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/admin_duration"
                android:layout_marginLeft="5dp"
                android:textColor="@color/secondary_color"
                />
            <TextView
                android:id="@+id/admin_text_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="center"
                android:text="0"
                />
            <SeekBar
                android:id="@+id/admin_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="24"
                />

        </LinearLayout>

        <Button
            android:id="@+id/admin_saveButton"
            android:layout_margin="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_button"
            android:background="@drawable/bt_round"
            android:textColor="@color/accent_color"
            />



    </LinearLayout>

    <include layout="@layout/view_progress"/>
    <include layout="@layout/view_retry"/>

</RelativeLayout>