<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Surface View Start -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/cardview_light_background"
        android:elevation="2dp"
        android:id="@+id/item_cardView"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            >

            <!--Item-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:text="@string/wsList_item"
                    android:textColor="@color/very_dark_grey"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="match_parent"
                    android:id="@+id/item_type"
                    android:textColor="@color/black"
                    android:gravity="center"
                    />

            </LinearLayout>

            <!--Category-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:text="@string/wsList_category"
                    android:textColor="@color/very_dark_grey"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="match_parent"
                    android:id="@+id/item_category"
                    android:textColor="@color/black"
                    android:gravity="center"
                    />

            </LinearLayout>

            <!--Bussines-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:text="@string/wsList_bussines"
                    android:textColor="@color/very_dark_grey"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="match_parent"
                    android:id="@+id/item_bussines"
                    android:textColor="@color/black"
                    android:gravity="center"
                    />

            </LinearLayout>

            <!--Farm name-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:text="@string/wsList_farmname"
                    android:textColor="@color/very_dark_grey"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="match_parent"
                    android:id="@+id/item_farm"
                    android:textColor="@color/black"
                    android:gravity="center"
                    />

            </LinearLayout>

            <!--Phone-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:text="@string/wsList_phone"
                    android:textColor="@color/very_dark_grey"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:layout_height="match_parent"
                    android:id="@+id/item_phone"
                    android:textColor="@color/black"
                    android:gravity="center"
                    />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
