<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/row_task_swiper">
 <!-- Bottom View Start-->
 <RelativeLayout
     android:background="@color/task_color_complete"
     android:id="@+id/bottom_wrapper"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     >

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:text="@string/technical_task_complete"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="26sp"
      android:textStyle="bold"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      />

 </RelativeLayout>
 <!-- Bottom View End-->

 <!-- Surface View Start -->
 <android.support.v7.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:cardUseCompatPadding="true"
     app:cardBackgroundColor="@color/cardview_light_background"
     android:elevation="2dp"

     >

  <LinearLayout
      android:padding="10dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal"
      android:gravity="center"
      >

   <ImageView
       android:layout_width="50dp"
       android:layout_height="50dp"
       android:id="@+id/row_task_check"
       android:layout_gravity="center"
       />

   <LinearLayout
       android:layout_width="0dp"
       android:layout_weight="1"
       android:layout_height="100dp"
       android:orientation="vertical"
       android:paddingLeft="30dp"
       >

    <!--Item-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >
     <TextView
         android:layout_width="0dp"
         android:layout_weight="0.3"
         android:layout_height="wrap_content"
         android:text="@string/technical_task_description"
         android:textColor="@color/very_dark_grey"
         android:gravity="center"
         />

     <TextView
         android:layout_width="0dp"
         android:layout_weight="0.7"
         android:layout_height="match_parent"
         android:textColor="@color/black"
         android:gravity="center"
         android:id="@+id/task_name"
         />

    </LinearLayout>

    <!--Item-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        >
     <TextView
         android:layout_width="0dp"
         android:layout_weight="0.3"
         android:layout_height="wrap_content"
         android:text="@string/technical_task_duration"
         android:textColor="@color/very_dark_grey"
         android:gravity="center"
         />

     <TextView
         android:layout_width="0dp"
         android:layout_weight="0.7"
         android:layout_height="match_parent"
         android:textColor="@color/black"
         android:gravity="center"
         android:id="@+id/task_duration"
         />

    </LinearLayout>

   </LinearLayout>
  </LinearLayout>
 </android.support.v7.widget.CardView>
 <!-- Surface View End -->
</com.daimajia.swipe.SwipeLayout>
